feat(db): consolidar ddl de base de datos y refactorizar dataloaders base